fixed pop section icon alignment

--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,7 @@ body {
 }
 
 .booki-logo {
-	padding: 15px;
-	margin-top: 15px;
+	padding: 30px 50px;
 }
 
 .section-title {
@@ -127,7 +126,7 @@ body {
 	border: 1px solid var(--filter-bg-color);
 	height: 50px;
 	position: relative;
-	transition: border-color 0.2s ease-in-out;
+	/* transition: border-color 0.2s ease-in-out; */
 	padding: 0 10px;
 }
 
@@ -340,10 +339,7 @@ nav a:hover {
 .popular-title {
 	display: flex;
 	justify-content: space-between;
-}
-
-.fa-solid.fa-chart-line {
-	margin-top: 25px;
+	align-items: center;
 }
 
 .popular-cards {
